--- a/src/style.css
+++ b/src/style.css
@@ -20,41 +20,47 @@ body {
 
 .leftTools,
 .rightTools {
-	height: 100%;
+	height: 80vh;
 	display: flex;
 	align-items: center;
 	gap: 4rem;
 }
 
 .colors {
-	justify-self: flex-end;
-	display: flex;
-	flex-direction: column;
-	font-size: 0;
-	gap: 0.2rem;
+	display: grid;
+	grid-template-rows: repeat(16, 1fr);
 	list-style: none;
+	height: 100%;
+	aspect-ratio: 1 / 16;
+}
+.clr {
+	width: 100%;
+	position: relative;
 }
 .clr_radio {
 	display: none;
 }
 .clr_label {
-	display: inline-block;
-	width: 1.8rem;
-	height: 1.8rem;
+	flex: 1;
+	position: absolute;
+	inset: 0.1rem;
+	transform-origin: center center;
 	cursor: pointer;
 }
 
 input:checked ~ .clr_label {
 	transform: scale(1.2);
+	z-index: 10;
 }
 .tools {
 	display: flex;
 	flex-direction: column;
+	justify-content: space-around;
 	align-items: center;
-	gap: 0.2rem;
+	height: 100%;
+	flex-wrap: wrap;
 	list-style: none;
 	width: 100%;
-	gap: 2rem;
 }
 .tool_radio {
 	display: none;
