--- a/src/style.css
+++ b/src/style.css
@@ -109,6 +109,39 @@ input:checked ~ .size_label {
 	outline: 2px solid white;
 }
 
+.resizeModal {
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	padding: 2rem;
+	background: #c0c0c0;
+	animation: appear 0.2s ease-in-out;
+}
+.resizeModal input[type='number'],
+.resizeModal select {
+	width: 250px;
+	display: block;
+	margin-top: 0.3rem;
+	margin-bottom: 1rem;
+}
+.resizeModal_btns {
+	display: flex;
+	flex-direction: row;
+}
+
+.resizeModal_btns button {
+	width: 100%;
+}
+@keyframes appear {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
 sketch-app {
 	/* border: 1px solid white; */
 	grid-column: 2;
@@ -119,4 +152,5 @@ sketch-app {
 	position: relative;
 	background-color: #282828;
 	touch-action: none;
+	user-select: none;
 }
