--- a/src/style.scss
+++ b/src/style.scss
@@ -2,4 +2,5 @@
 @import './style/base/reset';
 @import './style/layout/app';
 @import './style/components/tools';
+@import './style/components/colors';
 @import './style/components/settings';
