--- a/src/style/components/_tools.scss
+++ b/src/style/components/_tools.scss
@@ -1,32 +1,34 @@
 .tools {
-	grid-column: -2;
 	grid-row: 2 / -2;
-	display: grid;
-	gap: 0.2rem;
-}
-.tool {
-	position: relative;
+	grid-column: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
 	&_radio {
 		display: none;
 	}
 	&_label {
-		position: absolute;
+		height: calc(100% / 11 - 2px);
+		width: auto;
+		aspect-ratio: 1 / 1;
+		position: relative;
 		cursor: pointer;
-		height: 100%;
-		left: 50%;
-		transform: translate(-50%, 0);
+		overflow: hidden;
+		padding: 0.3125rem;
+		background-color: $primary-200;
 	}
 	&_label:hover {
-		transform: scale(1.1) translate(-50%, 0);
-		transition: transform ease-out 0.2s;
+		img {
+			transform: scale(1.2);
+		}
+		border: 1px solid darken($accent, 10);
 	}
-	&_img {
-		max-height: 100%;
-		max-width: 100%;
-		display: block;
-		margin: auto;
+	img {
+		object-fit: cover;
+		height: 100%;
 	}
-	&_radio:checked ~ &_label {
-		border: 1px solid white;
+	&_radio:checked + &_label {
+		border: 2px solid $accent;
 	}
 }
