--- a/src/style/layout/_app.scss
+++ b/src/style/layout/_app.scss
@@ -2,15 +2,15 @@
 	height: 100%;
 	width: 100%;
 	display: grid;
-	grid-template-rows: 1fr 80vh 1fr;
-	grid-template-columns: repeat(11, 1fr) 5rem;
-	background-color: $primary-200;
+	grid-template-rows: 1rem 80vh 1fr;
+	grid-template-columns: repeat(12, 1fr);
+	background-color: $primary-0;
 }
 
 .sketch {
 	grid-row: 2;
-	grid-column: 4 / -2;
-	background-color: $primary-0;
+	grid-column: 3 / -3;
+	background-color: $primary-200;
 	overflow: hidden;
 	touch-action: none;
 	user-select: none;
