btnSizes, fix crop overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,8 @@
 @import './style/base/variables';
 @import './style/base/reset';
 @import './style/layout/app';
+@import './style/layout/leftBlock';
 @import './style/components/tools';
 @import './style/components/colors';
+@import './style/components/sizes';
 @import './style/components/settings';
