--- a/src/style/components/_tools.scss
+++ b/src/style/components/_tools.scss
@@ -27,7 +27,10 @@
 		object-fit: cover;
 		height: 100%;
 	}
-	&_radio:checked + &_label {
+	&_radio:checked + &_label,
+	&_label:hover::after {
+		transform: scale(1.2);
+		z-index: 2;
 		border: 2px solid $accent;
 	}
 }
