helpers actions btn

--- a/src/style/components/_tools.scss
+++ b/src/style/components/_tools.scss
@@ -15,7 +15,7 @@
 		cursor: pointer;
 		overflow: hidden;
 		padding: 0.125rem;
-		background-color: $primary-200;
+		// background-color: $primary-200;
 	}
 	&_label:hover {
 		img {
