addlayer, delete layer

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,8 @@
 @import './style/layout/rightBlock';
 @import './style/components/tools';
 @import './style/components/colors';
+@import './style/components/colorpicker';
 @import './style/components/sizes';
 @import './style/components/helper';
 @import './style/components/actions';
+@import './style/components/layers';
