--- a/src/style/components/_helper.scss
+++ b/src/style/components/_helper.scss
@@ -40,6 +40,54 @@
 	}
 }
 
+[helper] {
+	position: relative;
+	&::before {
+		content: attr(helper);
+		font-size: 0.8rem;
+		position: absolute;
+		top: 0%;
+		left: 50%;
+		transform: translateX(-50%) translateY(calc(-100% - 5px));
+		background-color: $accent;
+		padding: 0.2rem 0.3rem;
+		border-radius: 2px;
+		opacity: 0;
+		font-weight: bold;
+	}
+	&::after {
+		content: '';
+		position: absolute;
+		top: 0%;
+		left: 50%;
+		transform: translateX(-50%) translateY(-100%);
+
+		border-left: 5px solid transparent;
+		border-right: 5px solid transparent;
+		border-top: 5px solid $accent;
+		opacity: 0;
+	}
+	&:hover::after,
+	&:hover::before {
+		opacity: 0.9;
+		transition: opacity 0.2s;
+	}
+	&[helper-btm] {
+		&::before {
+			top: 100%;
+			transform: translateX(-50%) translateY(5px);
+		}
+		&::after {
+			top: 100%;
+			transform: translateX(-50%) translateY(0);
+			border-left: 5px solid transparent;
+			border-right: 5px solid transparent;
+			border-top: 0;
+			border-bottom: 5px solid $accent;
+		}
+	}
+}
+
 @keyframes helperAppear {
 	from {
 		opacity: 0;
