--- a/src/style/components/_tools.scss
+++ b/src/style/components/_tools.scss
@@ -1,15 +1,17 @@
 .tools {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
+	display: grid;
+	grid-template-columns: 3rem 3rem;
+	width: 100%;
+	justify-content: center;
+	justify-items: center;
+	gap: 1rem;
+
 	&_radio {
 		display: none;
 	}
 	&_label {
-		height: calc(100% / 11 - 2px);
-		width: auto;
+		width: 80%;
+		height: auto;
 		aspect-ratio: 1 / 1;
 		position: relative;
 		cursor: pointer;
