--- a/src/style/layout/_leftBlock.scss
+++ b/src/style/layout/_leftBlock.scss
@@ -2,6 +2,7 @@
 	grid-row: 2;
 	grid-column: 1 / 3;
 	display: flex;
-	justify-content: space-evenly;
-	padding: 1rem;
+	width: 100%;
+	flex-direction: column;
+	align-items: center;
 }
