resize layers, resize modal, new helpers, translate

--- a/src/style.scss
+++ b/src/style.scss
@@ -10,3 +10,5 @@
 @import './style/components/helper';
 @import './style/components/actions';
 @import './style/components/layers';
+@import './style/components/modals';
+@import './style/components/resize';
