remove aspect-ratio

--- a/src/style/components/_colors.scss
+++ b/src/style/components/_colors.scss
@@ -1,7 +1,6 @@
 .color {
-	width: min(80%, 3rem);
-	height: auto;
-	aspect-ratio: 69 / 69;
+	width: 3rem;
+	height: 3rem;
 	cursor: pointer;
 	outline: 0;
 	border: 0;
