--- a/src/style/layout/_leftBlock.scss
+++ b/src/style/layout/_leftBlock.scss
@@ -1,8 +1,9 @@
 .leftBlock {
-	grid-row: 2;
+	grid-row: 1;
 	grid-column: 1 / 3;
 	display: flex;
 	width: 100%;
 	flex-direction: column;
 	align-items: center;
+	padding-top: 1rem;
 }
