--- a/src/style/layout/_rightBlock.scss
+++ b/src/style/layout/_rightBlock.scss
@@ -1,8 +1,9 @@
 .rightBlock {
-	grid-row: 2;
+	grid-row: 1;
 	grid-column: -3 / -1;
 	display: flex;
 	flex-direction: column;
-	padding: 1rem;
+	align-items: center;
 	gap: 1rem;
+	padding-top: 1rem;
 }
