--- a/src/style/base/_variables.scss
+++ b/src/style/base/_variables.scss
@@ -1,4 +1,5 @@
 $primary-200: #3f3e3e;
 $primary-0: #282828;
-$accent: #008751;
+$accent: #3071a9;
 $error: #a22b2d;
+$boxShadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
