--- a/src/style/components/_anim.scss
+++ b/src/style/components/_anim.scss
@@ -132,20 +132,19 @@
 	}
 	// style input number
 	&_fps {
-		width: 3rem;
-		border: 1px solid white;
+		width: 2.6rem;
+		padding-left: 0.2rem;
 		border-radius: 0.25rem;
+		border: 0;
 		background-color: transparent;
 		color: white;
-		text-align: center;
 		font-size: 1rem;
 		cursor: pointer;
 		transition: background-color 0.3s;
-		&:hover {
-			background-color: $accent;
+		&:hover,
+		&:focus {
+			// background-color: $accent;
+			outline: 1px solid white;
 		}
-	}
-	&_fps::-webkit-inner-spin-button {
-		-webkit-appearance: none;
 	}
 }
