--- a/src/style/components/_sizes.scss
+++ b/src/style/components/_sizes.scss
@@ -1,36 +1,98 @@
-.sizes {
+.size {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	align-items: center;
-	margin-bottom: 1rem;
-	margin-top: 3rem;
-	&_radio {
-		display: none;
-	}
+	justify-content: center;
 	&_label {
-		width: 2rem;
-		height: 2rem;
-		position: relative;
-		cursor: pointer;
-		& span {
-			content: '';
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			transform: translate(-50%, -50%);
-			background-color: white;
-		}
+		color: white;
+		white-space: nowrap;
 	}
-	&_radio:checked + &_label {
-		border: 2px solid $accent;
+	&_input {
+		cursor: pointer;
 	}
 }
-
-@for $i from 1 to 9 {
-	.sizes_label:nth-of-type(#{$i}) {
-		& span {
-			width: calc(0.3rem + #{$i * 8%});
-			height: calc(0.3rem + #{$i * 8%});
-		}
+input[type='range'] {
+	-webkit-appearance: none;
+	margin: 18px 0;
+	width: 100%;
+	&:focus {
+		outline: none;
+	}
+	&::-webkit-slider-runnable-track {
+		width: 100%;
+		height: 8.4px;
+		cursor: pointer;
+		box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+		background: $accent;
+		border-radius: 1.3px;
+		border: 0.2px solid #010101;
+	}
+	&::-webkit-slider-thumb {
+		box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+		border: 1px solid #000000;
+		height: 1rem;
+		width: 0.5rem;
+		margin-top: -0.25rem;
+		border-radius: 3px;
+		background: #ffffff;
+		cursor: pointer;
+		-webkit-appearance: none;
+	}
+	&:focus::-webkit-slider-runnable-track {
+		background: #367ebd;
+	}
+	&::-moz-range-track {
+		width: 100%;
+		height: 8.4px;
+		cursor: pointer;
+		box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+		background: $accent;
+		border-radius: 1.3px;
+		border: 0.2px solid #010101;
+	}
+	&::-moz-range-thumb {
+		box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+		border: 1px solid #000000;
+		height: 1rem;
+		width: 0.5rem;
+		border-radius: 3px;
+		background: #ffffff;
+		cursor: pointer;
+	}
+	&::-ms-track {
+		width: 100%;
+		height: 8.4px;
+		cursor: pointer;
+		background: transparent;
+		border-color: transparent;
+		border-width: 16px 0;
+		color: transparent;
+	}
+	&::-ms-fill-lower {
+		background: $accent;
+		border: 0.2px solid #010101;
+		border-radius: 2.6px;
+		box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+	}
+	&::-ms-fill-upper {
+		background: $accent;
+		border: 0.2px solid #010101;
+		border-radius: 2.6px;
+		box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+	}
+	&::-ms-thumb {
+		box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+		border: 1px solid #000000;
+		height: 1rem;
+		width: 0.5rem;
+		border-radius: 3px;
+		background: #ffffff;
+		cursor: pointer;
+	}
+	&:focus::-ms-fill-lower {
+		background: $accent;
+	}
+	&:focus::-ms-fill-upper {
+		background: $accent;
 	}
 }
