export png,gif,json

--- a/src/style.scss
+++ b/src/style.scss
@@ -14,3 +14,4 @@
 @import './style/components/anim';
 @import './style/components/modals';
 @import './style/components/resize';
+@import './style/components/download';
